--- a/src/utils/commonStyles/flex.css
+++ b/src/utils/commonStyles/flex.css
@@ -136,6 +136,6 @@
 .flex-col-b-sb-cen {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
 }
